# xelix-technical-challenge

./: README.md  analyse.py  pyproject.toml
invoice/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
invoice/management/commands/: demo_data.py
invoice/migrations/: 0001_initial.py
invoice/templates/: base.html
invoice/tests/: conftest.py  test_serializer.py  test_views.py
invoice_manager/: settings.py  urls.py
